--- a/CIM/CIM/Pages/Shared/_Layout.cshtml
+++ b/CIM/CIM/Pages/Shared/_Layout.cshtml
@@ -12,18 +12,16 @@
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light box-shadow mb-3" style="background-color: rgba(120,157,74,0.7);">
+        <nav class="navbar navbar-light" style="background-color: rgba(120,157,74,0.7); border-bottom: 5px solid rgba(120,157,74,0.9);">
             <div class="container">
-                <a class="navbar-brand" asp-area="" asp-page="/Index" style=" color: rgb(151,27,47);">Home</a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
-                        aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <a class="navbar-brand" asp-area="" asp-page="/Devices/Deleted" style="color: rgb(151,27,47);">Deleted Devices</a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
-                        aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
+                <div class="d-flex align-items-center">
+                    <a class="navbar-brand" href="http://chas/"><img src="/css/logo.png" alt="logo" style="height: 40px;"></a>
+                    <a class="navbar-brand me-1" asp-area="" asp-page="/Index" style="color: rgb(151,27,47);">Home</a>
+                    <span class="me-1">|</span>
+                    <a class="navbar-brand me-1" asp-area="" asp-page="/Devices/Create" style="color: rgb(151,27,47);">Add New Device</a>
+                    <span class="me-1">|</span>
+                    <a class="navbar-brand me-1" asp-area="" asp-page="/Devices/Deleted" style="color: rgb(151,27,47);">Deleted Devices</a>
+                </div>
             </div>
         </nav>
     </header>
