--- a/CIM/CIM/Pages/Shared/_Layout.cshtml
+++ b/CIM/CIM/Pages/Shared/_Layout.cshtml
@@ -5,8 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] - CIM</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="~/fontawesome/css/all.css" />
-    <script src="https://kit.fontawesome.com/68f646c941.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/CIM.styles.css" asp-append-version="true" />
 </head>
@@ -27,10 +26,11 @@
     </header>
     <div class="container">
         <main role="main" class="pb-3">
+            <br />
             @RenderBody()
         </main>
     </div>
-
+    <script src="https://kit.fontawesome.com/68f646c941.js" crossorigin="anonymous"></script>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/jquery/dist/jquery.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
